CVSL-1937-Status badge alignment fix

--- a/assets/sass/components/_status-tags.scss
+++ b/assets/sass/components/_status-tags.scss
@@ -4,6 +4,6 @@
   display: inline-block;
   white-space: nowrap;
   text-align: center;
-  min-width: 7em;
+  min-width: 10em;
   text-transform: none;
 }
